crates/lang/macro/tests/ui/fail/H-03-use-forbidden-idents.stderr
error: encountered invalid identifier starting with __pro_
  --> $DIR/H-03-use-forbidden-idents.rs:16:16
   |
16 |         pub fn __pro_message(&self) {
   |                ^^^^^^^^^^^^^

error: encountered invalid identifier starting with __pro_
  --> $DIR/H-03-use-forbidden-idents.rs:18:17
   |
18 |             let __pro_first = ();
   |                 ^^^^^^^^^^^
